--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "dev:api": "nx serve api"
+    "dev:api": "nx serve api",
+    "dev:services": "docker compose up"
   },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0"
@@ -37,6 +39,7 @@
     "eslint-config-prettier": "8.1.0",
     "jest": "27.2.3",
     "prettier": "^2.5.1",
+    "prisma": "^3.10.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   }
