--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
+    "start": "node dist/apps/api/main.js",
+    "build": "yarn build:api",
     "test": "nx test",
+    "build:api": "nx build api",
     "dev:api": "nx serve api",
     "dev:services": "docker compose up"
   },
