--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:services": "docker compose up",
     "format": "nx format:write",
     "format:check": "nx format:check",
-    "format:write": "nx format:write"
+    "format:write": "nx format:write",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -43,10 +44,17 @@
     "@typescript-eslint/parser": "~5.10.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,html,graphql}": [
+      "yarn format --uncommitted"
+    ]
   }
 }
