--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,9 @@
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
       "@mogami/api/config/feature": ["libs/api/config/feature/src/index.ts"],
       "@mogami/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
-      "@mogami/api/core/feature": ["libs/api/core/feature/src/index.ts"]
+      "@mogami/api/core/feature": ["libs/api/core/feature/src/index.ts"],
+      "@mogami/api/transaction/data-access": ["libs/api/transaction/data-access/src/index.ts"],
+      "@mogami/api/transaction/feature": ["libs/api/transaction/feature/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
