feat: implement @mogami/solana library

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@prisma/client": "^3.10.0",
+    "@solana/web3.js": "^1.35.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "joi": "^17.6.0",
@@ -36,6 +37,7 @@
     "@nrwl/cli": "13.8.3",
     "@nrwl/eslint-plugin-nx": "13.8.3",
     "@nrwl/jest": "13.8.3",
+    "@nrwl/js": "13.8.3",
     "@nrwl/linter": "13.8.3",
     "@nrwl/nest": "^13.8.3",
     "@nrwl/node": "13.8.3",
