--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nrwl/workspace": "13.8.3",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "eslint": "~8.7.0",
@@ -55,6 +56,7 @@
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
+    "supertest": "6.2.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.5.2"
   },
