--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@mogami/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@mogami/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
       "@mogami/api/account/feature": ["libs/api/account/feature/src/index.ts"],
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
