test: add CI condition for merging to main

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -11,7 +11,29 @@ env:
   SOLANA_RPC_ENDPOINT: 'http://localhost:8899'
 
 jobs:
-  build:
+  main:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
+      - uses: actions/checkout@v3
+        name: Checkout [main]
+        with:
+          fetch-depth: 0
+      - name: Derive appropriate SHAs for base and head for `nx affected` commands
+        uses: nrwl/nx-set-shas@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+      - run: npm install
+      - run: npx nx affected --target=build --parallel=3
+      - run: npx nx affected --target=test --parallel=2
+  pr:
+    runs-on: ${{ matrix.operating-system }}
+    if: ${{ github.event_name == 'pull_request' }}
+    strategy:
+      matrix:
+        node-version: [14.x]
+        operating-system: [ubuntu-20.04]
     services:
       postgres:
         image: postgres:12
@@ -25,13 +47,14 @@ jobs:
         image: solanalabs/solana:v1.9.9
         ports: ['8899:8899', '8900:8900']
         options: --entrypoint="solana-test-validator"
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      matrix:
-        node-version: [14.x]
-        operating-system: [ubuntu-20.04]
     steps:
       - uses: actions/checkout@v2
+        name: Checkout pr
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 0
+      - name: Derive appropriate SHAs for base and head for `nx affected` commands
+        uses: nrwl/nx-set-shas@v2
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
