test: add CI condition for merging to main

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
 SOLANA_RPC_ENDPOINT=mainnet-beta
+MINIMUM_KIN_VERSION=5
+MOGAMI_SUBSIDIZER_SECRET_KEY=
+MOGAMI_MINT_PUBLIC_KEY=
