--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.0",
     "@prisma/client": "^3.10.0",
+    "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.35.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
