--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,7 @@
       "@mogami/api/core/feature": ["libs/api/core/feature/src/index.ts"],
       "@mogami/api/transaction/data-access": ["libs/api/transaction/data-access/src/index.ts"],
       "@mogami/api/transaction/feature": ["libs/api/transaction/feature/src/index.ts"],
+      "@mogami/sdk": ["libs/sdk/src/index.ts"],
       "@mogami/solana": ["libs/solana/src/index.ts"]
     }
   },
