feat: Implement transaction methods (#21)
* test: add CI condition for merging to main

* fix: minimumKinVersion can be a constant

* fix: work around breaking import from TOKEN_PROGRAM_ID

* fix: use the single Solana instance instantiated in ApiCoreDataAccessService

* test: fix test connecting to Prisma

Co-authored-by: Bram Borggreve <borggreve@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
 SOLANA_RPC_ENDPOINT=mainnet-beta
+MOGAMI_MINT_PUBLIC_KEY=
+MOGAMI_SUBSIDIZER_SECRET_KEY=
