--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "dev:demo": "nx serve demo",
     "start": "node dist/apps/api/main.js",
     "build": "yarn build:api --prod",
     "test": "nx test",
@@ -16,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@heroicons/react": "latest",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
@@ -25,18 +27,29 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.35.1",
+    "autoprefixer": "latest",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "core-js": "^3.6.5",
+    "daisyui": "latest",
     "joi": "^17.6.0",
+    "postcss": "latest",
+    "react": "17.0.2",
+    "react-daisyui": "^1.2.2",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "swagger-ui-express": "^4.3.0",
+    "tailwindcss": "latest",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.8",
     "@nrwl/eslint-plugin-nx": "13.8.3",
     "@nrwl/jest": "13.8.3",
     "@nrwl/js": "13.8.3",
@@ -44,22 +57,38 @@
     "@nrwl/nest": "^13.8.3",
     "@nrwl/node": "13.8.3",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "^13.8.8",
     "@nrwl/tao": "13.8.3",
+    "@nrwl/web": "13.8.8",
     "@nrwl/workspace": "13.8.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/react": "17.0.40",
+    "@types/react-dom": "17.0.13",
+    "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
+    "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.3",
+    "eslint-plugin-react-hooks": "4.3.0",
     "husky": "^7.0.4",
     "jest": "27.2.3",
     "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
+    "react-test-renderer": "17.0.2",
     "supertest": "6.2.2",
     "ts-jest": "27.0.5",
+    "ts-morph": "^14.0.0",
     "typescript": "~4.5.2"
   },
   "lint-staged": {
