--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.35.1",
     "autoprefixer": "latest",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "daisyui": "latest",
+    "bip39": "^3.0.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "ed25519-hd-key": "^1.2.0",
     "joi": "^17.6.0",
     "postcss": "latest",
     "react": "17.0.2",
