--- a/libs/sdk/tsconfig.json
+++ b/libs/sdk/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node"
+  },
+  "ts-node": {
+    "esm": true,
+    "swc": true
+  },
   "files": [],
   "include": [],
   "references": [
