--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "license": "MIT",
   "scripts": {
     "dev:demo": "nx serve demo",
+    "dev:sdk": "nodemon --watch ./api-swagger.json libs/sdk/src/lib/codegen/codegen.ts",
     "start": "node dist/apps/api/main.js",
     "build": "yarn build:api --prod",
     "test": "nx test",
     "build:api": "nx build api",
+    "build:sdk": "ts-node libs/sdk/src/lib/codegen/codegen.ts",
     "dev:api": "nx serve api",
     "dev:services": "docker compose up",
     "format": "nx format:write",
@@ -28,11 +30,11 @@
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.35.1",
     "autoprefixer": "latest",
-    "core-js": "^3.6.5",
-    "daisyui": "latest",
     "bip39": "^3.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "core-js": "^3.6.5",
+    "daisyui": "latest",
     "ed25519-hd-key": "^1.2.0",
     "joi": "^17.6.0",
     "postcss": "latest",
@@ -41,7 +43,7 @@
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.7",
+    "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.0.0",
     "swagger-ui-express": "^4.3.0",
     "tailwindcss": "latest",
@@ -63,6 +65,8 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.8",
     "@nrwl/workspace": "13.8.3",
+    "@swc/core": "^1.2.156",
+    "@swc/helpers": "^0.3.8",
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "7.0.2",
     "@types/jest": "27.0.2",
@@ -85,12 +89,15 @@
     "husky": "^7.0.4",
     "jest": "27.2.3",
     "lint-staged": "^12.3.4",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
     "react-test-renderer": "17.0.2",
     "supertest": "6.2.2",
+    "swagger-typescript-api": "^9.3.1",
     "ts-jest": "27.0.5",
     "ts-morph": "^14.0.0",
+    "ts-node": "^10.7.0",
     "typescript": "~4.5.2"
   },
   "lint-staged": {
