feat: add Keypair generation and importing to demo app

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "daisyui": "latest",
+    "dexie": "^3.2.1",
+    "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "joi": "^17.6.0",
     "postcss": "latest",
@@ -69,6 +71,7 @@
     "@swc/helpers": "^0.3.8",
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/bs58": "^4.0.1",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.40",
@@ -93,6 +96,7 @@
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
     "react-test-renderer": "17.0.2",
+    "stream-browserify": "^3.0.0",
     "supertest": "6.2.2",
     "swagger-typescript-api": "^9.3.1",
     "ts-jest": "27.0.5",
