--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+CORS_ORIGINS=http://localhost:4200
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
 SOLANA_RPC_ENDPOINT=mainnet-beta
 MOGAMI_MINT_PUBLIC_KEY=
