feat: switch OpenAPI generator to @openapitools/openapi-generator-cli

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "license": "MIT",
   "scripts": {
     "dev:demo": "nx serve demo",
-    "dev:sdk": "nodemon --watch ./api-swagger.json libs/sdk/src/lib/codegen/codegen.ts",
+    "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
     "start": "node dist/apps/api/main.js",
     "build": "yarn build:api --prod",
     "test": "nx test",
     "build:api": "nx build api",
-    "build:sdk": "ts-node libs/sdk/src/lib/codegen/codegen.ts",
+    "build:sdk": "yarn openapi-generator-cli generate -i ./api-swagger.json -g typescript-axios -o libs/sdk/src/generated",
     "dev:api": "nx serve api",
     "dev:services": "docker compose up",
     "format": "nx format:write",
@@ -68,6 +68,7 @@
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.8",
     "@nrwl/workspace": "13.8.3",
+    "@openapitools/openapi-generator-cli": "^2.4.26",
     "@swc/core": "^1.2.156",
     "@swc/helpers": "^0.3.8",
     "@testing-library/react": "12.1.4",
@@ -99,7 +100,6 @@
     "react-test-renderer": "17.0.2",
     "stream-browserify": "^3.0.0",
     "supertest": "6.2.2",
-    "swagger-typescript-api": "^9.3.1",
     "ts-jest": "27.0.5",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
