--- a/package.json
+++ b/package.json
@@ -55,19 +55,18 @@
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
-    "@nrwl/cli": "13.8.3",
-    "@nrwl/cypress": "13.8.8",
-    "@nrwl/eslint-plugin-nx": "13.8.3",
-    "@nrwl/jest": "13.8.3",
-    "@nrwl/js": "13.8.3",
-    "@nrwl/linter": "13.8.3",
-    "@nrwl/nest": "^13.8.3",
-    "@nrwl/node": "13.8.3",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "^13.8.8",
-    "@nrwl/tao": "13.8.3",
-    "@nrwl/web": "13.8.8",
-    "@nrwl/workspace": "13.8.3",
+    "@nrwl/cli": "13.9.2",
+    "@nrwl/cypress": "13.9.2",
+    "@nrwl/eslint-plugin-nx": "13.9.2",
+    "@nrwl/jest": "13.9.2",
+    "@nrwl/js": "13.9.2",
+    "@nrwl/linter": "13.9.2",
+    "@nrwl/nest": "13.9.2",
+    "@nrwl/node": "13.9.2",
+    "@nrwl/nx-cloud": "13.1.6",
+    "@nrwl/react": "13.9.2",
+    "@nrwl/web": "13.9.2",
+    "@nrwl/workspace": "13.9.2",
     "@openapitools/openapi-generator-cli": "^2.4.26",
     "@swc/core": "^1.2.156",
     "@swc/helpers": "^0.3.8",
@@ -103,7 +102,8 @@
     "ts-jest": "27.0.5",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "nx": "13.9.2"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
