--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "jest": "27.2.3",
     "lint-staged": "^12.3.4",
     "nodemon": "^2.0.15",
+    "nx": "13.9.2",
     "prettier": "^2.5.1",
     "prisma": "^3.10.0",
     "react-test-renderer": "17.0.2",
@@ -102,8 +103,7 @@
     "ts-jest": "27.0.5",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "~4.5.2",
-    "nx": "13.9.2"
+    "typescript": "~4.5.2"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
