chore: add peerDependencies to get rid of warnings at yarn install

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "private": true,
   "dependencies": {
-    "@heroicons/react": "latest",
+    "@heroicons/react": "^1.0.6",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
@@ -29,18 +29,18 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.35.1",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.4",
     "bignumber": "^1.1.0",
     "bip39": "^3.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
-    "daisyui": "latest",
+    "daisyui": "^2.10.0",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "joi": "^17.6.0",
-    "postcss": "latest",
+    "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-daisyui": "^1.2.2",
     "react-dom": "17.0.2",
@@ -49,10 +49,12 @@
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.0.0",
     "swagger-ui-express": "^4.3.0",
-    "tailwindcss": "latest",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "7.16.11",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.9.2",
@@ -82,6 +84,7 @@
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
+    "babel-loader": "8.2.3",
     "cypress": "^9.1.0",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
@@ -90,6 +93,7 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.3",
     "eslint-plugin-react-hooks": "4.3.0",
+    "express": "4.17.3",
     "husky": "^7.0.4",
     "jest": "27.2.3",
     "lint-staged": "^12.3.4",
@@ -103,7 +107,8 @@
     "ts-jest": "27.0.5",
     "ts-morph": "^14.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "webpack": "5.70.0"
   },
   "lint-staged": {
     "*.{js,json,css,scss,md,ts,html,graphql}": [
