--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-daisyui": "^1.2.2",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
+    "redirect-ssl": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "^0.13.9",
     "rxjs": "^7.0.0",
