feat: implement api-airdrop feature

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 CORS_ORIGINS=http://localhost:4200
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
+MOGAMI_AIRDROP_DEFAULT=1
+MOGAMI_AIRDROP_MAX=50000
+MOGAMI_AIRDROP_SECRET_KEY=
+MOGAMI_MINT_DECIMALS=5
 MOGAMI_MINT_PUBLIC_KEY=KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX
 MOGAMI_SUBSIDIZER_SECRET_KEY=
 SOLANA_RPC_ENDPOINT=devnet
