feat: add Airdrop UI to Demo app

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,7 +9,8 @@ on:
 
 env:
   DATABASE_URL: 'postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami'
-  MOGAMI_MINT_PUBLIC_KEY: 'kinXdEcpDQeHPEuQnqmUgtYykqKGVFq6CeVX5iAHJq6'
+  MOGAMI_MINT_DECIMALS: 5
+  MOGAMI_MINT_PUBLIC_KEY: 'KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX'
   MOGAMI_SUBSIDIZER_SECRET_KEY: '[155,252,122,114,97,197,108,234,140,3,107,199,138,221,65,69,142,81,202,134,41,125,12,24,87,224,89,114,153,146,138,12,5,84,102,38,7,100,200,251,34,72,143,134,254,202,250,134,208,29,170,161,12,132,240,98,16,241,4,69,193,117,148,215]'
   NX_CLOUD_DISTRIBUTED_EXECUTION: true
   SOLANA_RPC_ENDPOINT: 'http://localhost:8899'
