chore: add basic Docker configuration

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev:demo": "nx serve demo",
     "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
     "dev:services": "docker compose up",
+    "docker:build": "docker build . -t ghcr.io/kin-labs/mogami",
+    "docker:push": "docker push ghcr.io/kin-labs/mogami",
+    "docker:run": "docker run -it -p 8000:3000 ghcr.io/kin-labs/mogami",
     "format": "nx format:write",
     "format:check": "nx format:check",
     "format:write": "nx format:write",
