fix: make sure to use simplified workspace.json

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -112,5 +112,6 @@ jobs:
         with:
           node-version: '14'
       - run: yarn install --frozen-lockfile
+      - run: yarn build
       - name: Start Nx Agent ${{ matrix.agent }}
         run: yarn nx-cloud start-agent
