--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,9 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@mogami/airdrop": ["libs/airdrop/src/index.ts"],
       "@mogami/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@mogami/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
       "@mogami/api/account/feature": ["libs/api/account/feature/src/index.ts"],
+      "@mogami/api/airdrop/data-access": ["libs/api/airdrop/data-access/src/index.ts"],
+      "@mogami/api/airdrop/feature": ["libs/api/airdrop/feature/src/index.ts"],
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
       "@mogami/api/config/feature": ["libs/api/config/feature/src/index.ts"],
       "@mogami/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
