--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn prisma generate && yarn build:api",
+    "build:admin": "nx build admin --prod",
     "build:api": "nx build api --prod",
     "build:sdk": "yarn openapi-generator-cli generate -i ./api-swagger.json -g typescript-axios -o libs/sdk/src/generated && nx format:write --uncommitted",
+    "dev:admin": "nx serve admin",
     "dev:api": "nx serve api",
     "dev:demo": "nx serve demo",
     "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
