feat: make api host the admin

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "yarn prisma generate && yarn build:api",
+    "build": "yarn build:admin && yarn prisma generate && yarn build:api",
     "build:admin": "nx build admin --prod",
     "build:api": "nx build api --prod",
     "build:sdk": "yarn openapi-generator-cli generate -i ./api-swagger.json -g typescript-axios -o libs/sdk/src/generated && nx format:write --uncommitted",
@@ -29,6 +29,7 @@
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
     "@prisma/client": "^3.10.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -44,6 +45,7 @@
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
+    "fs-extra": "^10.0.1",
     "joi": "^17.6.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
