feat: add GraphQL to Api for Admin functionality

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.4.3",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
@@ -35,6 +37,7 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.37.0",
+    "apollo-server-express": "^3.6.7",
     "autoprefixer": "^10.4.4",
     "bignumber": "^1.1.0",
     "bip39": "^3.0.4",
@@ -46,6 +49,7 @@
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "fs-extra": "^10.0.1",
+    "graphql": "^16.3.0",
     "joi": "^17.6.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
