feat: implement authentication for Admin account

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+ADMIN_EMAIL="mogami@kin.org"
+ADMIN_PASSWORD="Mogami@dmin1"
+COOKIE_DOMAIN="localhost"
+COOKIE_NAME="__session"
 CORS_ORIGINS=http://localhost:4200
 DATABASE_URL="postgresql://prisma:prisma@localhost:5432/prisma?schema=mogami"
+JWT_SECRET="MogamiJwtSecret!"
 MOGAMI_AIRDROP_DEFAULT=1
 MOGAMI_AIRDROP_MAX=50000
 MOGAMI_AIRDROP_SECRET_KEY=
