--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,12 +21,16 @@
       "@mogami/api/account/feature": ["libs/api/account/feature/src/index.ts"],
       "@mogami/api/airdrop/data-access": ["libs/api/airdrop/data-access/src/index.ts"],
       "@mogami/api/airdrop/feature": ["libs/api/airdrop/feature/src/index.ts"],
+      "@mogami/api/auth/data-access": ["libs/api/auth/data-access/src/index.ts"],
+      "@mogami/api/auth/feature": ["libs/api/auth/feature/src/index.ts"],
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
       "@mogami/api/config/feature": ["libs/api/config/feature/src/index.ts"],
       "@mogami/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
       "@mogami/api/core/feature": ["libs/api/core/feature/src/index.ts"],
       "@mogami/api/transaction/data-access": ["libs/api/transaction/data-access/src/index.ts"],
       "@mogami/api/transaction/feature": ["libs/api/transaction/feature/src/index.ts"],
+      "@mogami/api/user/data-access": ["libs/api/user/data-access/src/index.ts"],
+      "@mogami/api/user/feature": ["libs/api/user/feature/src/index.ts"],
       "@mogami/keypair": ["libs/keypair/src/index.ts"],
       "@mogami/sdk": ["libs/sdk/src/index.ts"],
       "@mogami/shared/util/admin-sdk": ["libs/shared/util/admin-sdk/src/index.ts"],
