--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "build": "yarn build:admin && yarn prisma generate && yarn build:api",
     "build:admin": "nx build admin --prod",
+    "build:admin-sdk": "graphql-codegen --config libs/shared/util/admin-sdk/src/codegen.yml",
     "build:api": "nx build api --prod",
     "build:sdk": "yarn openapi-generator-cli generate -i ./api-swagger.json -g typescript-axios -o libs/sdk/src/generated && nx format:write --uncommitted",
     "dev:admin": "nx serve admin",
+    "dev:admin-sdk": "yarn build:admin-sdk --watch",
     "dev:api": "nx serve api",
     "dev:demo": "nx serve demo",
     "dev:sdk": "nodemon --watch ./api-swagger.json -x 'yarn build:sdk'",
@@ -25,9 +27,11 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.4.3",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
+    "@nestjs/graphql": "^10.0.8",
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
@@ -35,6 +39,7 @@
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.37.0",
+    "apollo-server-express": "^3.6.7",
     "autoprefixer": "^10.4.4",
     "bignumber": "^1.1.0",
     "bip39": "^3.0.4",
@@ -46,6 +51,8 @@
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "fs-extra": "^10.0.1",
+    "graphql": "^16.3.0",
+    "graphql-tag": "^2.12.6",
     "joi": "^17.6.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
@@ -58,11 +65,17 @@
     "rxjs": "^7.5.5",
     "swagger-ui-express": "^4.3.0",
     "tailwindcss": "^3.0.23",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "urql": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "7.16.11",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/introspection": "^2.1.1",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-urql": "^3.5.7",
     "@nestjs/schematics": "^8.0.8",
     "@nestjs/testing": "^8.4.3",
     "@nrwl/cli": "13.9.5",
