feat: implement initial api e2e tests

--- a/libs/shared/util/admin-sdk/src/codegen.yml
+++ b/libs/shared/util/admin-sdk/src/codegen.yml
@@ -5,6 +5,8 @@ documents:
 generates:
   apps/api-e2e/src/generated/api-sdk.ts:
     plugins:
+      - add:
+          content: '/* eslint-disable */'
       - typescript
       - typescript-document-nodes
       - typescript-operations
