--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -37,7 +37,8 @@ jobs:
       - run: yarn format:check
       - run: yarn build
       # - run: yarn nx-cloud start-ci-run
-      - run: yarn nx e2e api-e2e
+      - run: yarn cypress install
+      - run: yarn nx affected --target=e2e --parallel --max-parallel=3
       - run: yarn nx affected --target=build --parallel --max-parallel=3
       - run: yarn nx affected --target=lint --parallel --max-parallel=3
       - run: yarn nx affected --target=test --parallel --max-parallel=2
@@ -77,7 +78,8 @@ jobs:
       - run: yarn format:check
       - run: yarn build
       # - run: yarn nx-cloud start-ci-run
-      - run: yarn nx e2e api-e2e
+      - run: yarn cypress install
+      - run: yarn nx affected --target=e2e --parallel --max-parallel=3
       - run: yarn nx affected --target=build --parallel --max-parallel=3
       - run: yarn nx affected --target=lint --parallel --max-parallel=3
       - run: yarn nx affected --target=test --parallel --max-parallel=2
