feat: implement authentication for Admin API (#81)
* feat: implement authentication for Admin account

* feat: implement initial api e2e tests

* fix: make demo-e2e accept server config with dynamic port

--- a/libs/shared/util/admin-sdk/src/codegen.yml
+++ b/libs/shared/util/admin-sdk/src/codegen.yml
@@ -3,6 +3,14 @@ schema: 'api-schema.graphql'
 documents:
   - 'libs/shared/util/admin-sdk/src/graphql/**/*.graphql'
 generates:
+  apps/api-e2e/src/generated/api-sdk.ts:
+    plugins:
+      - add:
+          content: '/* eslint-disable */'
+      - typescript
+      - typescript-document-nodes
+      - typescript-operations
+      - fragment-matcher
   libs/shared/util/admin-sdk/src/generated/graphql.tsx:
     plugins:
       - 'typescript'
