--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.3",
     "@nestjs/graphql": "^10.0.8",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.3",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
@@ -45,19 +47,25 @@
     "@solana/web3.js": "^1.37.0",
     "apollo-server-express": "^3.6.7",
     "autoprefixer": "^10.4.4",
+    "bcrypt": "^5.0.1",
     "bignumber": "^1.1.0",
     "bip39": "^3.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.21.1",
     "daisyui": "^2.13.4",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
+    "express": "^4.17.3",
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
     "joi": "^17.6.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "postcss": "^8.4.12",
     "react": "17.0.2",
     "react-daisyui": "^1.7.2",
@@ -75,9 +83,12 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "7.16.11",
+    "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/fragment-matcher": "^3.2.1",
     "@graphql-codegen/introspection": "^2.1.1",
     "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-document-nodes": "^2.2.8",
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-urql": "^3.5.7",
     "@cypress/code-coverage": "^3.9.12",
@@ -119,7 +130,6 @@
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.3.0",
-    "express": "4.17.3",
     "husky": "^7.0.4",
     "jest": "27.5.1",
     "lint-staged": "^12.3.7",
