--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "test": "nx test && yarn test:admin-e2e && yarn test:demo-e2e",
     "test:admin-e2e:watch": "nx run admin-e2e:e2e --headed --watch",
     "test:admin-e2e": "nx run admin-e2e:e2e",
+    "test:api-e2e:watch": "nx run api-e2e:e2e --verbose --watch",
+    "test:api-e2e": "nx run api-e2e:e2e",
     "test:demo-e2e:watch": "nx run demo-e2e:e2e --headed --watch",
     "test:demo-e2e": "nx run demo-e2e:e2e"
   },
@@ -83,6 +85,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "7.16.11",
+    "@cypress/code-coverage": "^3.9.12",
     "@graphql-codegen/add": "^3.1.1",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/fragment-matcher": "^3.2.1",
@@ -91,7 +94,6 @@
     "@graphql-codegen/typescript-document-nodes": "^2.2.8",
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-urql": "^3.5.7",
-    "@cypress/code-coverage": "^3.9.12",
     "@nestjs/schematics": "^8.0.8",
     "@nestjs/testing": "^8.4.3",
     "@nrwl/cli": "13.9.5",
@@ -111,6 +113,7 @@
     "@swc/helpers": "^0.3.8",
     "@testing-library/react": "12.1.4",
     "@testing-library/react-hooks": "7.0.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
