--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@mogami/api/app/feature": ["libs/api/app/feature/src/index.ts"],
       "@mogami/api/auth/data-access": ["libs/api/auth/data-access/src/index.ts"],
       "@mogami/api/auth/feature": ["libs/api/auth/feature/src/index.ts"],
+      "@mogami/api/auth/util": ["libs/api/auth/util/src/index.ts"],
       "@mogami/api/config/data-access": ["libs/api/config/data-access/src/index.ts"],
       "@mogami/api/config/feature": ["libs/api/config/feature/src/index.ts"],
       "@mogami/api/core/data-access": ["libs/api/core/data-access/src/index.ts"],
