--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,6 +24,19 @@ jobs:
   main:
     runs-on: ubuntu-20.04
     if: ${{ github.event_name != 'pull_request' }}
+    services:
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_DB: prisma
+          POSTGRES_USER: prisma
+          POSTGRES_PASSWORD: prisma
+        ports: ['5432:5432']
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+      solana:
+        image: solanalabs/solana:v1.9.9
+        ports: ['8899:8899', '8900:8900']
+        options: --entrypoint="solana-test-validator"
     steps:
       - uses: actions/checkout@v3
         name: Checkout [main]
