feat: implement CRUD endpoints for Wallet entity

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,6 +34,8 @@
       "@mogami/api/transaction/feature": ["libs/api/transaction/feature/src/index.ts"],
       "@mogami/api/user/data-access": ["libs/api/user/data-access/src/index.ts"],
       "@mogami/api/user/feature": ["libs/api/user/feature/src/index.ts"],
+      "@mogami/api/wallet/data-access": ["libs/api/wallet/data-access/src/index.ts"],
+      "@mogami/api/wallet/feature": ["libs/api/wallet/feature/src/index.ts"],
       "@mogami/keypair": ["libs/keypair/src/index.ts"],
       "@mogami/sdk": ["libs/sdk/src/index.ts"],
       "@mogami/shared/util/admin-sdk": ["libs/shared/util/admin-sdk/src/index.ts"],
