--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@mogami/admin/home/feature": ["libs/admin/home/feature/src/index.ts"],
+      "@mogami/admin/shell/feature": ["libs/admin/shell/feature/src/index.ts"],
+      "@mogami/admin/ui/layout": ["libs/admin/ui/layout/src/index.ts"],
+      "@mogami/admin/ui/theme-switcher": ["libs/admin/ui/theme-switcher/src/index.ts"],
       "@mogami/airdrop": ["libs/airdrop/src/index.ts"],
       "@mogami/api-app-module": ["apps/api/src/app/app.module.ts"],
       "@mogami/api/account/data-access": ["libs/api/account/data-access/src/index.ts"],
