feat: Implement network stats

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.3",
+    "@nestjs/schedule": "^1.1.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.1",
     "@prisma/client": "^3.11.1",
@@ -123,6 +124,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/bs58": "^4.0.1",
+    "@types/cron": "^1.7.3",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
