--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ JWT_SECRET="MogamiJwtSecret!"
 MOGAMI_AIRDROP_DEFAULT=1
 MOGAMI_AIRDROP_MAX=50000
 MOGAMI_AIRDROP_SECRET_KEY=
+MOGAMI_MAINNET=false
 MOGAMI_MINT_DECIMALS=5
 MOGAMI_MINT_PUBLIC_KEY=KinDesK3dYWo3R2wDk6Ucaf31tvQCCSYyL8Fuqp33GX
 MOGAMI_SUBSIDIZER_SECRET_KEY=
