--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
   },
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.7",
+    "@chakra-ui/theme": "^1.14.0",
+    "@chakra-ui/theme-tools": "^1.3.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@heroicons/react": "^1.0.6",
     "@nestjs/apollo": "^10.0.8",
     "@nestjs/common": "^8.4.3",
@@ -62,6 +68,7 @@
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "express": "^4.17.3",
+    "framer-motion": "^6",
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
     "graphql-tag": "^2.12.6",
