--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@chakra-ui/react": "^1.8.7",
     "@chakra-ui/theme": "^1.14.0",
     "@chakra-ui/theme-tools": "^1.3.6",
+    "@choc-ui/paginator": "^3.4.0",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@heroicons/react": "^1.0.6",
@@ -69,6 +70,8 @@
     "dexie-react-hooks": "^1.1.1",
     "ed25519-hd-key": "^1.2.0",
     "express": "^4.17.3",
+    "formik": "^2.2.9",
+    "formik-chakra-ui": "^1.6.0",
     "framer-motion": "^6",
     "fs-extra": "^10.0.1",
     "graphql": "^16.3.0",
@@ -89,7 +92,8 @@
     "swagger-ui-express": "^4.3.0",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
-    "urql": "^2.2.0"
+    "urql": "^2.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -131,6 +135,7 @@
     "@types/react-dom": "17.0.14",
     "@types/react-router-dom": "5.3.3",
     "@types/supertest": "^2.0.12",
+    "@types/yup": "^0.29.13",
     "@typescript-eslint/eslint-plugin": "~5.17.0",
     "@typescript-eslint/parser": "~5.17.0",
     "babel-jest": "27.5.1",
