--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@mogami/admin/app/feature": ["libs/admin/app/feature/src/index.ts"],
+      "@mogami/admin/app/ui": ["libs/admin/app/ui/src/index.ts"],
       "@mogami/admin/auth/data-access": ["libs/admin/auth/data-access/src/index.ts"],
       "@mogami/admin/auth/feature": ["libs/admin/auth/feature/src/index.ts"],
       "@mogami/admin/auth/ui": ["libs/admin/auth/ui/src/index.ts"],
